# FlowFabric

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMMAND_COVERAGE.txt  CONNECTION_LIFECYCLE.txt  CONTRIBUTING.md  Cargo.toml  DEAD_CODE_ANALYSIS.txt  ERROR_HANDLING_ANALYSIS.txt  ERROR_HANDLING_MIGRATION.md  GLIDE_CORE_ANALYSIS.md  LICENSE  MODULE_DEPENDENCIES.txt  PUBLIC_API_ANALYSIS.txt  README.md  SECURITY.md  SESSION_SUMMARY.md  deny.toml  logger_core  release.toml  utils
benches/: Cargo.toml  README.md  check-release.sh
benches/comparisons/apalis/: COMPARISON.md  Cargo.toml
benches/comparisons/baseline/: Cargo.toml
benches/comparisons/faktory/: Cargo.toml  README.md
benches/comparisons/ferriskey-baseline/: Cargo.toml
benches/comparisons/postgres/: Cargo.toml
benches/comparisons/wider/: Cargo.toml
benches/harness/: Cargo.toml
benches/harness/benches/: quorum_cancel_fanout.rs  submit_claim_complete.rs  suspend_signal_resume.rs
benches/harness/src/: comparison.rs  lib.rs  report.rs  workload.rs
benches/perf-invest/: bridge-event-audit.md  bridge-event-gap-report.md  plan-iam.md  plan-telemetry.md  plan-wrappers.md  report-envelope.md  report-w1-round2.md  report-w1.md  report-w2-round2.md  report-w2.md  report-w3.md  review-p35-w2.md  review-r1-w1.md  review-r2-w2.md  review-rfc011-phase1-w3.md  review-rfc011-phase2-w2.md  review-rfc011-phase3-w3.md  review-w1.md  review-w2.md  review-w3.md  rfc-exec-colocation-debate.md  rfc011-phase2-verification-w3.md  tier1-constraints.md  wider_50_50-ferriskey-wider-8cb6dff.json  wider_50_50-redis-rs-wider-8cb6dff.json  wider_80_20-ferriskey-wider-8cb6dff.json  wider_80_20-redis-rs-wider-8cb6dff.json  wider_get_only-ferriskey-wider-8cb6dff.json  wider_get_only-redis-rs-wider-8cb6dff.json  wider_pipeline_100-ferriskey-wider-8cb6dff.json  wider_pipeline_100-redis-rs-wider-8cb6dff.json  wider_streams-ferriskey-wider-8cb6dff.json  wider_streams-redis-rs-wider-8cb6dff.json
benches/perf-invest/20260418-024349/: README.md  ferriskey.folded  redis-rs.folded
benches/perf-invest/blocking-probe/: Cargo.toml
benches/perf-invest/envelope-probe/: Cargo.toml
benches/results/: .gitignore  COMPARISON.md  baseline.md  tier1-delta.md  tier1-post.md  tier1-pre.md
benches/results/v0.1.0/: flow_dag_linear-perf-1s-b4ec2c2.json  submit_claim_complete-fb36cdc.json  submit_claim_complete-fb5754d.json  submit_claim_complete-perf-1s-6fef93d.json
benches/scripts/: check_release.py
benches/smoke/: Cargo.toml  README.md
benches/smoke/src/: main.rs
crates/ff-backend-postgres/: Cargo.toml
crates/ff-backend-postgres/migrations/: 0001_initial.sql  0001_placeholder.sql  0002_budget.sql  0003_dispatch_outbox.sql  0003_suspend_signal.sql  0004_suspend_signal.sql  0005_timeout_scanners.sql  0006_lease_event_outbox.sql  0007_signal_event_outbox.sql  0008_lease_event_instance_tag.sql  0009_signal_event_instance_tag.sql  0010_operator_event_outbox.sql  0011_waitpoint_pending_extensions.sql  0012_quota_policy.sql  0013_budget_policy_extensions.sql  0014_cancel_backlog.sql  0016_started_at_ms.sql  0017_claim_grant_table.sql  0018_completion_event_lookup_idx.sql  0019_flow_summary.sql  0020_budget_usage_by_exec.sql  0021_worker_registry.sql  0022_worker_registry_event_pk.sql
crates/ff-backend-postgres/src/: admin.rs  attempt.rs  budget.rs  claim_grant.rs  completion.rs  dispatch.rs  error.rs  exec_core.rs  flow.rs  flow_staging.rs  handle_codec.rs  lease_event.rs  lease_event_subscribe.rs  lib.rs  listener.rs  migrate.rs  operator.rs  operator_event.rs  pool.rs  scanner_supervisor.rs  scheduler.rs  signal.rs  signal_delivery_subscribe.rs  signal_event.rs  stream.rs  suspend.rs  suspend_ops.rs  typed_ops.rs  version.rs  worker_registry.rs
crates/ff-backend-postgres/tests/: capabilities.rs  list_pending_waitpoints.rs  pg_budget_admin.rs  pg_engine_backend_attempt.rs  read_quota_policy_limits.rs  release_admission.rs  rfc024_reclaim.rs  schema_0001.rs  schema_0002.rs  schema_0010_0011.rs  schema_0012_0013.rs  spine_a_pt1_mutations.rs  spine_a_pt2_mutations.rs  spine_b_reads.rs  subscribe_lease_history.rs  subscribe_signal_delivery.rs  suspend_signal.rs  typed_check_admission.rs  typed_claim_execution.rs  typed_complete_execution.rs  typed_deliver_approval_signal.rs  typed_fail_execution.rs  (+8 more)
crates/ff-backend-sqlite/: Cargo.toml
crates/ff-backend-valkey/: Cargo.toml
crates/ff-client/: Cargo.toml
crates/ff-core/: Cargo.toml
crates/ff-engine/: Cargo.toml
crates/ff-observability/: Cargo.toml
crates/ff-observability-http/: Cargo.toml
crates/ff-readiness-tests/: Cargo.toml
crates/ff-scheduler/: Cargo.toml
crates/ff-script/: Cargo.toml  build.rs
crates/ff-sdk/: Cargo.toml
crates/ff-server/: Cargo.toml  STAGE_A_SCOPE.md
crates/ff-test/: Cargo.toml
crates/flowfabric/: Cargo.toml
examples/deploy-approval/: Cargo.toml  README.md
examples/external-callback/: Cargo.toml  README.md
examples/ff-dev/: Cargo.toml  README.md
examples/incident-remediation/: Cargo.toml  README.md
examples/media-pipeline/: .gitignore  Cargo.toml  README.md  models  samples  vendor
examples/retry-and-cancel/: Cargo.toml  README.md
examples/token-budget/: Cargo.toml  README.md
examples/umbrella-quickstart/: Cargo.toml  README.md
examples/v011-wave9-postgres/: Cargo.toml  README.md
examples/v013-cairn-454-budget-ledger/: Cargo.toml  README.md
ferriskey/: API_DESIGN.md  Cargo.toml  DESIGN_DEBT.md  MIGRATION_MAP.md  PUBSUB_REWRITE.md  README.md
ferriskey/.cargo/: config.toml
ferriskey/benches/: connections_benchmark.rs  memory_benchmark.rs
ferriskey/src/: cluster_scan_container.rs  cmd.rs  compression.rs  errors.rs  ferriskey_client.rs  lib.rs  macros.rs  otel_db_semantics.rs  pipeline.rs  request_type.rs  retry_strategies.rs  scripts_container.rs  telemetry_compat.rs  value.rs
ferriskey/telemetry/: Cargo.toml
ferriskey/tests/: test_client.rs  test_cluster_client.rs  test_compression.rs  test_dns.rs  test_fcall.rs  test_integration_real_workload.rs  test_pubsub.rs  test_standalone_client.rs  test_tracing_spans.rs
(+746 files in other folders)
