[workspace]
resolver = "3"
exclude = ["examples", "benches"]
members = [
    "ferriskey",
    "crates/ff-core",
    "crates/ff-script",
    "crates/ff-engine",
    "crates/ff-scheduler",
    "crates/ff-sdk",
    "crates/ff-test",
    "crates/ff-server",
    "crates/ff-readiness-tests",
    "crates/ff-backend-valkey",
    "crates/ff-observability",
]

[workspace.package]
version = "0.3.1"
edition = "2024"
license = "Apache-2.0"
authors = ["FlowFabric Contributors"]
repository = "https://github.com/avifenesh/FlowFabric"
homepage = "https://github.com/avifenesh/FlowFabric"
keywords = ["valkey", "execution-engine", "workflow", "async"]
categories = ["database", "asynchronous"]

[workspace.dependencies]
# Internal crates.
#
# `version` alongside `path` is required by cargo-deny's wildcard
# check on publish-bound crates (crates.io refuses path-only deps).
# Cargo uses `path` locally and falls back to the registry version
# when a dependent is published. Keep these in sync with
# `[workspace.package] version`.
ff-core = { version = "0.3.1", path = "crates/ff-core" }
ff-script = { version = "0.3.1", path = "crates/ff-script" }
ff-engine = { version = "0.3.1", path = "crates/ff-engine" }
ff-scheduler = { version = "0.3.1", path = "crates/ff-scheduler" }
ff-sdk = { version = "0.3.1", path = "crates/ff-sdk" }
ff-server = { version = "0.3.1", path = "crates/ff-server" }
ff-test = { path = "crates/ff-test" }
ff-backend-valkey = { version = "0.3.1", path = "crates/ff-backend-valkey" }
ff-observability = { version = "0.3.1", path = "crates/ff-observability" }
ferriskey = { version = "0.3.1", path = "ferriskey" }

# Shared external deps
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "net", "time", "sync", "macros"] }
tracing = "0.1"
thiserror = "2"
crc16 = "0.4"
async-trait = "0.1"
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "limit", "trace"] }
futures = "0.3"
# Minimal `Stream` trait for ff-core's `CompletionStream` type alias
# (issue #90). Pulled in instead of the full `futures` crate to keep
# ff-core's dep surface narrow — ff-core is the schema crate.
futures-core = "0.3"
