[package]
name = "ferriskey"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["FlowFabric Contributors"]

[dependencies]
# Allocator — mimalloc on supported platforms, system allocator elsewhere
mimalloc = { version = "0.1", default-features = false }

# Core
bytes = "1"
futures = "^0.3"
futures-util = { version = "0.3", features = ["alloc", "sink"] }
futures-intrusive = "0.5"
once_cell = "1"
async-trait = "0.1"
pin-project-lite = "0.2"
dispose = "0.5"
arc-swap = "1.9"

# Tokio runtime
tokio = { version = "1", features = ["rt", "net", "time", "sync", "io-util", "macros"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-retry2 = { version = "0.6", features = ["jitter"] }

# TLS
rustls = { version = "0.23", features = ["aws-lc-rs"] }
rustls-platform-verifier = { version = "0.6", default-features = false }
tokio-rustls = { version = "0.26", default-features = false }
rustls-pki-types = "1.14"

# Redis protocol
ryu = "1"
itoa = "1"
url = "2"
percent-encoding = "2"
num-bigint = "0.4"
crc16 = "0.4"

# Cluster
rand = "0.9"
dashmap = "6"
parking_lot = "0.12"
socket2 = { version = "0.6", features = ["all"] }

# Telemetry
telemetrylib = { path = "./telemetry" }
tracing = "0.1"

# AWS IAM
aws-config = "1"
aws-credential-types = "1"
aws-sigv4 = "1"
http = "1"
urlencoding = "2"

# Serialization / misc
serde_json = "1"
serde = { version = "1", features = ["derive"] }
sha1_smol = "1"
nanoid = "0.4"
versions = "7"
strum = "0.28"
strum_macros = "0.28"
zstd = { version = "0.13" }
lz4 = { version = "1.28" }
num_cpus = "1"

[features]
default = []
test-util = []

[dev-dependencies]
rsevents = "0.3.1"
socket2 = "0.6"
tempfile = "3.27.0"
rstest = "^0.26"
serial_test = "3"
criterion = { version = "^0.8", features = ["html_reports", "async_tokio"] }
which = "8"
ctor = "0.9"
rustls = { version = "0.23", features = ["aws-lc-rs"] }
iai-callgrind = "0.16"
tokio = { version = "1", features = ["rt-multi-thread"] }
ferriskey = { path = "." }
fnv = "1"
futures-time = "3"
partial-io = { version = "0.5", features = ["tokio", "quickcheck1"] }
quickcheck = "1"
once_cell = "1"
anyhow = "1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
serde_json = "1"
hdrhistogram = "7"
libc = "0.2"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(standalone_heartbeat)', 'cfg(feature, values("iam_tests"))'] }

[lints.clippy]
await_holding_lock = "deny"
mutex_atomic = "warn"

[[bench]]
name = "connections_benchmark"
harness = false

