[package]
name = "ff-bench"
version = "0.1.0"
edition = "2024"
publish = false
license = "Apache-2.0"

[lib]
path = "src/lib.rs"

[[bench]]
name = "submit_claim_complete"
harness = false
path = "benches/submit_claim_complete.rs"

# Scenario 2 — suspend → signal → resume latency (HMAC roundtrip).
# Criterion per-iter = one full roundtrip (Shape A). See the bench's
# module comment for the exact timing envelope.
[[bench]]
name = "suspend_signal_resume"
harness = false
path = "benches/suspend_signal_resume.rs"

# Scenario 6 — RFC-016 Stage C quorum-cancel fan-out latency.
# Measures end-to-end dispatch of sibling cancels under
# `Quorum(1, n) + CancelRemaining` for n in {10, 100, 1000}. Release-
# gate SLO: p99 <= 500 ms at n = 100 (§4.2). Harness lands in Stage C;
# the full workload body is filled in before the v0.6 pre-release gate.
[[bench]]
name = "quorum_cancel_fanout"
harness = false
path = "benches/quorum_cancel_fanout.rs"

# Scenario 3 — long-running steady-state (100 workers × 5 min).
# Criterion's iteration model doesn't fit a 5-minute run; custom
# tokio harness instead. Invoked via:
#   cargo run -p ff-bench --release --bin long_running -- --duration 300
[[bin]]
name = "long_running"
path = "src/bin/long_running.rs"

# Scenario 4 — linear flow DAG. 100 concurrent 10-node chains.
# Custom harness (criterion's iter model doesn't fit N-parallel-flow
# drains). Invoked via:
#   cargo run -p ff-bench --release --bin flow_dag -- --flows 100 --nodes 10
[[bin]]
name = "flow_dag"
path = "src/bin/flow_dag.rs"

# Scenario 5 — capability-routed claim under 3 distributions.
# Custom harness: 100 workers × 10 cap sets × 1000 tasks doesn't fit
# a criterion iter. Invoked via:
#   cargo run -p ff-bench --release --bin cap_routed -- --mode happy
[[bin]]
name = "cap_routed"
path = "src/bin/cap_routed.rs"

# RFC-015 §4.2 — EMA α / MAXLEN simulator. Offline replay of a bursty
# LLM-token trace through the dynamic-MAXLEN formula. Used to
# re-validate the α = 0.2, floor = 64, ceiling = 16_384 final design
# after Phase 0 raised the ceiling from 2048. Does NOT require
# ff-server — the measurement is over the EMA math + synthetic trace,
# not live Valkey behavior (RFC §4.2 is not yet implemented server-
# side; this bench selects the α that SHOULD ship with it). Invoked via:
#   cargo run -p ff-bench --release --bin ema_alpha_bench
[[bin]]
name = "ema_alpha_bench"
path = "src/bin/ema_alpha_bench.rs"

[dependencies]
ff-core = { path = "../../crates/ff-core" }
ff-sdk = { path = "../../crates/ff-sdk", features = ["direct-valkey-claim"] }
ff-server = { path = "../../crates/ff-server" }
ff-engine = { path = "../../crates/ff-engine" }
ff-test = { path = "../../crates/ff-test" }
ferriskey = { path = "../../ferriskey" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "signal", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
rand = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["async_tokio", "html_reports"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
